Reports: Change the routes

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -259,11 +259,11 @@ routes:
       handler: "Admin->quickBan"
     - url: "/admin/warn/{num}"
       handler: "Admin->quickWarn"
-    - url: "/admin/reports"
+    - url: "/support/reports"
       handler: "Report->list"
-    - url: "/admin/report{num}"
+    - url: "/support/report{num}"
       handler: "Report->view"
-    - url: "/admin/reportAction{num}"
+    - url: "/support/reportAction{num}"
       handler: "Report->action"
     - url: "/report/{num}"
       handler: "Report->create"
