Support: Add ability to delete comments in a ticket There used to be a button for this, but it didn't work. It works now

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -25,6 +25,8 @@ routes:
       handler: "Support->makeComment"
     - url: "/al_comments/create/support/reply/{num}"
       handler: "Support->AnswerTicketReply"
+    - url: "/support/comment/{num}/delete"
+      handler: "Support->deleteComment"
     - url: "/al_comments/create/{text}/{num}"
       handler: "Comment->makeComment"
     - url: "/support/delete/{num}"
