[WIP Maybe] Email: Add verification mechanism
This does work only if email is required by instance. If you're sysadmin, you can configure it in openvk.yml.

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -59,6 +59,10 @@ routes:
       handler: "Auth->restore"
     - url: "/restore/internal-finish"
       handler: "Auth->finishRestoringPassword"
+    - url: "/reg/resend"
+      handler: "Auth->resendEmail"
+    - url: "/regFinish"
+      handler: "Auth->verifyEmail"
     - url: "/setSID/{slug}"
       handler: "Auth->su"
     - url: "/settings"
