Wall: Add RSS output
Currently it doesn't support Images and Reposts, but in future i'll do that.

Reversly related to #437 XD

git status! ALSO IT'S TIME TO UPDATE COMPOSER git status!

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -105,6 +105,8 @@ routes:
           hashTag: ".++"
     - url: "/wall{num}"
       handler: "Wall->wall"
+    - url: "/wall{num}/rss"
+      handler: "Wall->rss"
     - url: "/wall{num}/makePost"
       handler: "Wall->makePost"
     - url: "/wall{num}_{num}"
