--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "lfkeitel/phptotp": "dev-master",
         "chillerlan/php-qrcode": "dev-main",
         "vearutop/php-obscene-censor-rus": "dev-master",
-        "erusev/parsedown": "dev-master"
+        "erusev/parsedown": "dev-master",
+        "bhaktaraz/php-rss-generator": "dev-master"
     },
     "minimum-stability": "dev"
 }
