Global: Add ability to configure display of commit hash

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -59,6 +59,7 @@ openvk:
         bellsAndWhistles:
             fartscroll: false
             testLabel: false
+            showCommitHash: true
         defaultMobileTheme: ""
     
     telemetry:
