Users: Add the ability to convert votes into a rating for yourself or other users Closes #345

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -73,6 +73,8 @@ routes:
       handler: "User->disableTwoFactorAuth"
     - url: "/coins_transfer"
       handler: "User->coinsTransfer"
+    - url: "/increase_social_credits"
+      handler: "User->increaseRating"
     - url: "/id{num}"
       handler: "User->view"
     - url: "/friends{num}"
