Settings: Add a blank deletion page
This commit adds a temporary blank profile deletion page in routes, as well as uncommenting the profile deletion block from the main settings page.

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -71,6 +71,8 @@ routes:
       handler: "User->twoFactorAuthSettings"
     - url: "/settings/2fa/disable"
       handler: "User->disableTwoFactorAuth"
+    - url: "/settings/deactivate"
+      handler: "User->deactivate"
     - url: "/coins_transfer"
       handler: "User->coinsTransfer"
     - url: "/increase_social_credits"
