Add audio upload feature

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -163,6 +163,20 @@ routes:
       handler: "Videos->edit"
     - url: "/video{num}_{num}/remove"
       handler: "Videos->remove"
+    - url: "/player"
+      handler: "Audio->app"
+    - url: "/player/upload"
+      handler: "Audio->upload"
+    - url: "/audios{num}"
+      handler: "Audio->list"
+    - url: "/audios/popular"
+      handler: "Audio->popular"
+    - url: "/audios/new"
+      handler: "Audio->new"
+    - url: "/audio{num}_{num}"
+      handler: "Audio->view"
+    - url: "/audio{num}_{num}/embed.xhtml"
+      handler: "Audio->embed"
     - url: "/{?!club}{num}"
       handler: "Group->view"
       placeholders:
