--- a/Web/static/js/package.json
+++ b/Web/static/js/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@atlassian/aui": "^8.5.1",
     "create-react-class": "^15.7.0",
+    "dashjs": "^4.3.0",
     "jquery": "^2.1.0",
     "knockout": "^3.5.1",
     "ky": "^0.19.0",
