Support: Allow agents to prevent users from creating tickets

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -273,6 +273,10 @@ routes:
       handler: "Admin->quickBan"
     - url: "/admin/warn/{num}"
       handler: "Admin->quickWarn"
+    - url: "/admin/support/ban/{num}"
+      handler: "Support->quickBanInSupport"
+    - url: "/admin/support/unban/{num}"
+      handler: "Support->quickUnbanInSupport"
     - url: "/method/{text}.{text}"
       handler: "VKAPI->route"
     - url: "/token"
