--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -66,6 +66,11 @@ openvk:
             enable: false
             domain: ""
             server: ""
+        piwik:
+            enable: false
+            container: ""
+            site: ""
+            layer: "dataLayer"
     
     credentials:
         smsc:
