Add photos.save, photos.saveWallPhoto, photos.saveOwnerPhoto, photos.getUploadServer
Didn't test, but shouldn't be really tough to fix afterwards if it'll break.

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -279,6 +279,8 @@ routes:
       handler: "Support->quickBanInSupport"
     - url: "/admin/support/unban/{num}"
       handler: "Support->quickUnbanInSupport"
+    - url: "/upload/photo/{text}"
+      handler: "VKAPI->photoUpload"
     - url: "/method/{text}.{text}"
       handler: "VKAPI->route"
     - url: "/token"
