--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ update.pid.old
 Web/static/js/node_modules
 
 tmp/*
-!tmp/.gitkeep
+!tmp/api-storage
 !tmp/themepack_artifacts/.gitkeep
 themepacks/*
 !themepacks/.gitkeep
