Add X-Accel-Expires for non-authorized users

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -6,6 +6,7 @@ openvk:
     
     preferences:
         femaleGenderPriority: true
+        nginxCacheTime: null
         uploads:
             disableLargeUploads: false
             mode: "basic"
