--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "chillerlan/php-qrcode": "dev-main",
         "vearutop/php-obscene-censor-rus": "dev-master",
         "erusev/parsedown": "dev-master",
-        "bhaktaraz/php-rss-generator": "dev-master"
+        "bhaktaraz/php-rss-generator": "dev-master",
+        "ext-simplexml": "*"
     },
     "minimum-stability": "dev"
 }
