--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -121,8 +121,10 @@ routes:
       handler: "Wall->delete"
     - url: "/wall{num}_{num}/pin"
       handler: "Wall->pin"
-    - url: "/blob_{text}/{text}.{text}"
+    - url: "/blob_{text}/{?path}.{text}"
       handler: "Blob->file"
+      placeholders:
+          path: "[A-z0-9\\-_\\/]{3,}"
     - url: "/themepack/{text}/{?version}/{?resClass}/{?any}"
       handler: "Themepacks->resource"
       placeholders:
