Fix typo in openvk.template.yml

--- a/install/automated/common/openvk.template.yml
+++ b/install/automated/common/openvk.template.yml
@@ -94,7 +94,7 @@ openvk:
         eventDB:
             enable: true # Better enable this
             database:
-                dsn: "mysql:unix_socket=/var/run/mysql/mysql.sock;dbname=openvk"
+                dsn: "mysql:unix_socket=/var/run/mysql/mysql.sock;dbname=openvk-eventdb"
                 user: "root"
                 password: "justMonika"
         notificationsBroker:
