--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "erusev/parsedown": "dev-master",
         "bhaktaraz/php-rss-generator": "dev-master",
         "ext-simplexml": "*",
-        "symfony/console": "5.4.x-dev"
+        "symfony/console": "5.4.x-dev",
+        "wapmorgan/morphos": "dev-master",
+        "ext-sodium": "*"
     },
     "minimum-stability": "dev"
 }
