About: Increase block of top groups & add "Links"
Closes #510

Co-authored-by: Celestora <kitsuruko@gmail.com>

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -57,6 +57,10 @@ openvk:
             links:
                 - name: "@left_menu_donate"
                   url: "/donate"
+        about:
+            links:
+                - name: "Link caption"
+                  url: "https://example.org/"
         adPoster:
             enable: false
             src: "https://example.org/ad_poster.jpeg"
