--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "al/emoji-detector": "dev-master",
         "ezyang/htmlpurifier": "dev-master",
         "scssphp/scssphp": "dev-master",
-        "lfkeitel/phptotp": "dev-master",
+        "lfkeitel/phptotp": "^v1.1.0",
         "chillerlan/php-qrcode": "dev-main",
         "vearutop/php-obscene-censor-rus": "dev-master",
         "erusev/parsedown": "dev-master",
@@ -19,6 +19,10 @@
         "symfony/console": "5.4.x-dev",
         "wapmorgan/morphos": "dev-master",
         "ext-sodium": "*"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-latest",
+        "squizlabs/php_codesniffer": "^3.6"
     },
     "minimum-stability": "dev"
 }
