Users: Add ability to change email address in settings Closes #63

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -73,6 +73,8 @@ routes:
       handler: "User->disableTwoFactorAuth"
     - url: "/settings/reset_theme"
       handler: "User->resetThemepack"
+    - url: "/settings/change_email"
+      handler: "User->emailChangeFinish"
     - url: "/coins_transfer"
       handler: "User->coinsTransfer"
     - url: "/increase_social_credits"
