OpenVK Modern: update theme.yml to match actual name

--- a/themepacks/openvk_modern/theme.yml
+++ b/themepacks/openvk_modern/theme.yml
@@ -7,5 +7,5 @@ metadata:
         _: "OpenVK Modern"
         en: "OpenVK Modern"
         ru: "OpenVK Modern"
-    author: "Mikitko Wiśniewski (rudzik8)"
+    author: "Mikita Wiśniewski (rudzik8)"
     description: "OpenVK theme in modern style"
