Add ability to set description of index page

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -3,6 +3,7 @@ openvk:
     appearance:
         name: "OpenVK"
         motd: "Yet another OpenVK instance"
+        description: ""
     
     preferences:
         femaleGenderPriority: true
