Deact.: Add some design to deactivated page, add ability to restore page

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -77,6 +77,8 @@ routes:
       handler: "User->emailChangeFinish"
     - url: "/settings/deactivate"
       handler: "User->deactivate"
+    - url: "/settings/reactivate"
+      handler: "Auth->reactivatePage"
     - url: "/coins_transfer"
       handler: "User->coinsTransfer"
     - url: "/increase_social_credits"
