--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -75,6 +75,10 @@ routes:
       handler: "User->resetThemepack"
     - url: "/settings/change_email"
       handler: "User->emailChangeFinish"
+    - url: "/settings/deactivate"
+      handler: "User->deactivate"
+    - url: "/settings/reactivate"
+      handler: "Auth->reactivatePage"
     - url: "/coins_transfer"
       handler: "User->coinsTransfer"
     - url: "/increase_social_credits"
