Cast translation parameters to string explicitly
Adds PHP 8.1 compatability

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "require": {
-        "php": "~7.3",
+        "php": "~7.3||~8.1",
         "guzzlehttp/guzzle": "^6.5",
         "komeiji-satori/curl": "dev-master",
         "whichbrowser/parser": "dev-master",
