--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -259,6 +259,14 @@ routes:
       handler: "Gifts->userGifts"
     - url: "/gifts"
       handler: "Gifts->stub"
+    - url: "/app{num}"
+      handler: "Apps->play"
+    - url: "/apps"
+      handler: "Apps->list"
+    - url: "/editapp"
+      handler: "Apps->edit"
+    - url: "/apps/uninstall"
+      handler: "Apps->unInstall"
     - url: "/admin"
       handler: "Admin->index"
     - url: "/admin/users"
