Add withdrawal tax to config

--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -19,6 +19,8 @@ openvk:
                 - "index.php"
         photos:
             upgradeStructure: true
+        apps:
+            withdrawTax: 8
         security:
             requireEmail: false
             requirePhone: false
