--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -31,6 +31,22 @@ routes:
       handler: "Comment->makeComment"
     - url: "/support/delete/{num}"
       handler: "Support->delete"
+    - url: "/bugtracker"
+      handler: "Bugtracker->index"
+    - url: "/bug{num}"
+      handler: "Bugtracker->view"
+    - url: "/bug{num}/setStatus"
+      handler: "Bugtracker->changeStatus"
+    - url: "/bug{num}/setPriority"
+      handler: "Bugtracker->changePriority"
+    - url: "/bug{num}/addComment"
+      handler: "Bugtracker->addComment"
+    - url: "/bugtracker/create"
+      handler: "Bugtracker->create"
+    - url: "/bugtracker/createProduct"
+      handler: "Bugtracker->createProduct"
+    - url: "/bug{num}/reproduce"
+      handler: "Bugtracker->reproduced"
     - url: "/language"
       handler: "About->language"
     - url: "/language/{text}.js"
