--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -49,6 +49,12 @@ routes:
       handler: "Bugtracker->createProduct"
     - url: "/bug{num}/reproduce"
       handler: "Bugtracker->reproduced"
+    - url: "/bt_product{num}/manageAccess"
+      handler: "Bugtracker->manageAccess"
+    - url: "/bt_product{num}/managePrivacy"
+      handler: "Bugtracker->managePrivacy"
+    - url: "/bt_product{num}/manageStatus"
+      handler: "Bugtracker->manageStatus"
     - url: "/language"
       handler: "About->language"
     - url: "/language/{text}.js"
