"Вы были исключены из программы ОВК Тестерс"

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -55,6 +55,10 @@ routes:
       handler: "Bugtracker->managePrivacy"
     - url: "/bt_product{num}/manageStatus"
       handler: "Bugtracker->manageStatus"
+    - url: "/bt_reporter{num}/kick"
+      handler: "Bugtracker->kickTester"
+    - url: "/bt_reporter{num}/unban"
+      handler: "Bugtracker->unbanTester"
     - url: "/language"
       handler: "About->language"
     - url: "/language/{text}.js"
