--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -299,6 +299,10 @@ routes:
       handler: "Support->quickBanInSupport"
     - url: "/admin/support/unban/{num}"
       handler: "Support->quickUnbanInSupport"
+    - url: "/admin/bannedLinks"
+      handler: "Admin->bannedLinks"
+    - url: "/admin/bannedLink/id{num}"
+      handler: "Admin->bannedLink"
     - url: "/upload/photo/{text}"
       handler: "VKAPI->photoUpload"
     - url: "/method/{text}.{text}"
