--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -55,6 +55,9 @@ openvk:
                 processingLimit: 3000
                 emojiProcessingLimit: 1000
         commerce: false
+        susLinks:
+            allowTransition: false
+            showReason: true
         ton:
             enabled: false
             address: "🅿"
