--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -97,6 +97,10 @@ routes:
       handler: "Group->sub"
     - url: "/setSub/v4/club"
       handler: "Group->attend"
+    - url: "/removeFromBl"
+      handler: "Blacklist->removeFromBl"
+    - url: "/addToBl"
+      handler: "Blacklist->addToBl"
     - url: "/groups/{num}/setNewOwner/{num}"
       handler: "Group->changeOwner"
     - url: "/comment{num}/like"
