--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -33,6 +33,8 @@ openvk:
                 maxViolations: 50
                 maxViolationsAge: 120
                 autoban: true
+            blacklists:
+                applyToAdmins: true
         registration:
             enable: true
             reason: "" # reason for disabling registration
