--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -119,6 +119,8 @@ routes:
       handler: "Wall->rss"
     - url: "/wall{num}/makePost"
       handler: "Wall->makePost"
+    - url: "/wall{num}/makePost/{num}"
+      handler: "Wall->makePost"
     - url: "/wall{num}_{num}"
       handler: "Wall->post"
     - url: "/wall{num}_{num}/like"
