Log posts changes

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -131,6 +131,10 @@ routes:
       handler: "Wall->delete"
     - url: "/wall{num}_{num}/pin"
       handler: "Wall->pin"
+    - url: "/wall{num}_{num}/history"
+      handler: "Wall->postHistory"
+    - url: "/wall{num}_{num}/history/restore{num}/{text}"
+      handler: "Wall->postHistoryRestore"
     - url: "/blob_{text}/{?path}.{text}"
       handler: "Blob->file"
       placeholders:
