--- a/openvk-example.yml
+++ b/openvk-example.yml
@@ -54,6 +54,7 @@ openvk:
                 maxSize: 60000
                 processingLimit: 3000
                 emojiProcessingLimit: 1000
+            logChanges: true
         commerce: false
         ton:
             enabled: false
