--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -65,6 +65,8 @@ routes:
       handler: "Auth->verifyEmail"
     - url: "/setSID/{slug}"
       handler: "Auth->su"
+    - url: "/revokeAllTokens"
+      handler: "Auth->revokeAllTokens"
     - url: "/settings"
       handler: "User->settings"
     - url: "/settings/2fa"
