--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -98,9 +98,9 @@ routes:
     - url: "/setSub/v4/club"
       handler: "Group->attend"
     - url: "/removeFromBl"
-      handler: "Blacklist->removeFromBl"
+      handler: "Blacklist->removeFromBlacklist"
     - url: "/addToBl"
-      handler: "Blacklist->addToBl"
+      handler: "Blacklist->addToBlacklist"
     - url: "/groups/{num}/setNewOwner/{num}"
       handler: "Group->changeOwner"
     - url: "/comment{num}/like"
