--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -311,6 +311,10 @@ routes:
       handler: "VKAPI->tokenLogin"
     - url: "/admin/sandbox"
       handler: "About->sandbox"
+    - url: "/names_admin.php"
+      handler: "Names->list"
+    - url: "/name{num}"
+      handler: "Names->action"
     - url: "/internal/wall{num}"
       handler: "Wall->wallEmbedded"
     - url: "/robots.txt"
