Ability to block URL (#693)

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -257,6 +257,8 @@ routes:
       handler: "About->invite"
     - url: "/away.php"
       handler: "Away->away"
+    - url: "/away.php/{num}"
+      handler: "Away->view"
     - url: "/gift{num}_{num}.png"
       handler: "Gifts->giftImage"
     - url: "/gifts{num}"
@@ -303,6 +305,12 @@ routes:
       handler: "Support->quickBanInSupport"
     - url: "/admin/support/unban/{num}"
       handler: "Support->quickUnbanInSupport"
+    - url: "/admin/bannedLinks"
+      handler: "Admin->bannedLinks"
+    - url: "/admin/bannedLink/id{num}"
+      handler: "Admin->bannedLink"
+    - url: "/admin/bannedLink/id{num}/unban"
+      handler: "Admin->unbanLink"
     - url: "/upload/photo/{text}"
       handler: "VKAPI->photoUpload"
     - url: "/method/{text}.{text}"
