--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -133,7 +133,7 @@ routes:
       handler: "Wall->pin"
     - url: "/wall{num}_{num}/history"
       handler: "Wall->postHistory"
-    - url: "/wall{num}_{num}/history/restore{num}/{text}"
+    - url: "/wall{num}_{num}/history/restore{num}"
       handler: "Wall->postHistoryRestore"
     - url: "/blob_{text}/{?path}.{text}"
       handler: "Blob->file"
