Карточка Агента Поддержки

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -31,6 +31,10 @@ routes:
       handler: "Comment->makeComment"
     - url: "/support/delete/{num}"
       handler: "Support->delete"
+    - url: "/support/agent{num}"
+      handler: "Support->agent"
+    - url: "/support/agent{num}/edit"
+      handler: "Support->editAgent"
     - url: "/language"
       handler: "About->language"
     - url: "/language/{text}.js"
