--- a/Web/di.yml
+++ b/Web/di.yml
@@ -44,3 +44,4 @@ services:
     - openvk\Web\Models\Repositories\Applications
     - openvk\Web\Models\Repositories\ContentSearchRepository
     - openvk\Web\Models\Repositories\BannedLinks
+    - openvk\Web\Models\Repositories\ChandlerGroups
