--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -307,6 +307,10 @@ routes:
       handler: "Support->quickUnbanInSupport"
     - url: "/admin/support/reports"
       handler: "Report->list"
+    - url: "/scumfeed"
+      handler: "Report->list"
+    - url: "/admin/report{num}"
+      handler: "Report->view"
     - url: "/admin/support/report{num}"
       handler: "Report->view"
     - url: "/admin/support/reportAction{num}"
