Users, Groups: Add a block with links This is similar to the links that are in the original VK, but unlike the original, links can be not only the group but also the page (Linktree moment).

--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -207,6 +207,14 @@ routes:
       handler: "Topics->edit"
     - url: "/topic{num}_{num}/delete"
       handler: "Topics->delete"
+    - url: "/links{num}"
+      handler: "Links->list"
+    - url: "/links{num}/create"
+      handler: "Links->create"
+    - url: "/links{num}/edit{num}"
+      handler: "Links->edit"
+    - url: "/links{num}/delete{num}"
+      handler: "Links->delete"
     - url: "/audios{num}"
       handler: "Audios->app"
     - url: "/audios{num}.json"
