--- a/Web/di.yml
+++ b/Web/di.yml
@@ -24,6 +24,7 @@ services:
     - openvk\Web\Presenters\ThemepacksPresenter
     - openvk\Web\Presenters\VKAPIPresenter
     - openvk\Web\Presenters\BannedLinkPresenter
+    - openvk\Web\Presenters\LinksPresenter
     - openvk\Web\Models\Repositories\Users
     - openvk\Web\Models\Repositories\Posts
     - openvk\Web\Models\Repositories\Photos
@@ -42,6 +43,7 @@ services:
     - openvk\Web\Models\Repositories\Gifts
     - openvk\Web\Models\Repositories\Topics
     - openvk\Web\Models\Repositories\Applications
+    - openvk\Web\Models\Repositories\Links
     - openvk\Web\Models\Repositories\ContentSearchRepository
     - openvk\Web\Models\Repositories\Aliases
     - openvk\Web\Models\Repositories\BannedLinks
