--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,7 +13,8 @@ on:
 env:
   BASE_IMAGE_NAME: openvk
   DB_IMAGE_NAME: mysql
-  EVENT_IMAGE_NAME: ck
+  EVENT_IMAGE_NAME: mysql
+  DB_VERSION: "8.0"
 
 jobs:
   build:
@@ -48,28 +49,16 @@ jobs:
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
 
-          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_ID:$VERSION . --push -f install/automated/kubernetes/openvk.Dockerfile --build-arg GITREPO=${{ github.repository }} --build-arg GITREF=${{ github.ref }}
+          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_ID:$VERSION . --push -f install/automated/kubernetes/openvk.Dockerfile --build-arg GITREPO=${{ github.repository }}
       
       - name: Build mysql image
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$DB_IMAGE_NAME
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          [ "$VERSION" == "master" ] && VERSION=latest
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
+          IMAGE_NAME=ghcr.io/${{ github.repository }}/$DB_IMAGE_NAME:$DB_VERSION-primary
 
-          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_ID:$VERSION . --push -f install/automated/kubernetes/mysql.Dockerfile --build-arg GITREF=${{ github.ref }}
+          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME . --push -f install/automated/kubernetes/mysql-primary.Dockerfile --build-arg VERSION=$DB_VERSION
       
-      - name: Build clickhouse image
+      - name: Build mysql-eventdb image
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository }}/$EVENT_IMAGE_NAME
-          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-          [ "$VERSION" == "master" ] && VERSION=latest
-          echo IMAGE_ID=$IMAGE_ID
-          echo VERSION=$VERSION
+          IMAGE_NAME=ghcr.io/${{ github.repository }}/$EVENT_IMAGE_NAME:$DB_VERSION-eventdb
 
-          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_ID:$VERSION . --push -f install/automated/kubernetes/ck.Dockerfile --build-arg GITREF=${{ github.ref }}
+          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME . --push -f install/automated/kubernetes/mysql-eventdb.Dockerfile --build-arg VERSION=$DB_VERSION
