--- a/install/automated/kubernetes/cm.yaml
+++ b/install/automated/kubernetes/cm.yaml
@@ -128,7 +128,7 @@ data:
           eventDB:
               enable: true
               database:
-                  dsn: "clickhouse:host=clickhouse-svc:9000;dbname=openvk-eventdb"
+                  dsn: "mysql:host=mysql-eventdb-svc;dbname=openvk-eventdb"
                   user: "openvk"
                   password: "openvk"
           notificationsBroker:
@@ -153,7 +153,7 @@ data:
           allEnabled: false
       
       database:
-          dsn: "mysql:host=mysql-svc;dbname=db"
+          dsn: "mysql:host=mysql-primary-svc;dbname=db"
           user: "openvk"
           password: "openvk"
       
