Switch from MySQL to MariaDB

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,9 +12,9 @@ on:
 
 env:
   BASE_IMAGE_NAME: openvk
-  DB_IMAGE_NAME: mysql
-  EVENT_IMAGE_NAME: mysql
-  DB_VERSION: "8.0"
+  DB_IMAGE_NAME: mariadb
+  EVENT_IMAGE_NAME: mariadb
+  DB_VERSION: "10.9"
 
 jobs:
   build:
@@ -51,14 +51,14 @@ jobs:
 
           docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_ID:$VERSION . --push -f install/automated/kubernetes/openvk.Dockerfile --build-arg GITREPO=${{ github.repository }}
       
-      - name: Build mysql image
+      - name: Build MariaDB primary image
         run: |
           IMAGE_NAME=ghcr.io/${{ github.repository }}/$DB_IMAGE_NAME:$DB_VERSION-primary
 
-          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME . --push -f install/automated/kubernetes/mysql-primary.Dockerfile --build-arg VERSION=$DB_VERSION
+          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME . --push -f install/automated/kubernetes/mariadb-primary.Dockerfile --build-arg VERSION=$DB_VERSION
       
-      - name: Build mysql-eventdb image
+      - name: Build MariaDB event image
         run: |
           IMAGE_NAME=ghcr.io/${{ github.repository }}/$EVENT_IMAGE_NAME:$DB_VERSION-eventdb
 
-          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME . --push -f install/automated/kubernetes/mysql-eventdb.Dockerfile --build-arg VERSION=$DB_VERSION
+          docker buildx build --platform linux/amd64,linux/arm64 -t $IMAGE_NAME . --push -f install/automated/kubernetes/mariadb-eventdb.Dockerfile --build-arg VERSION=$DB_VERSION
