Set root app in chandler configmap

--- a/install/automated/kubernetes/cm.yaml
+++ b/install/automated/kubernetes/cm.yaml
@@ -141,7 +141,7 @@ data:
     chandler:
       debug: true
       websiteUrl: null
-      rootApp:    "root"
+      rootApp:    "openvk"
       
       preferences:
           appendExtension: "xhtml"
