--- a/install/automated/kubernetes/manifests/001-configmap.yaml
+++ b/install/automated/kubernetes/manifests/001-configmap.yaml
@@ -140,7 +140,7 @@ data:
   chandler.yml: |
     chandler:
       debug: true
-      websiteUrl: null
+      websiteUrl: openvk.local
       rootApp:    "openvk"
       
       preferences:
@@ -158,7 +158,7 @@ data:
           password: "openvk"
       
       security:
-          secret: ""
+          secret: "081906e04f2921e48751fbc5df44dbbcd7f6ecba065ade3d8ea28034cb8d6db24da10965845b5f3376847674e3bce61b5c0e439d12eef3c00d30f3b953657cac"
           csrfProtection: "permissive"
           extendedValidation: false
           sessionDuration: 14
