--- a/install/automated/kubernetes/manifests/003-deployment.yaml
+++ b/install/automated/kubernetes/manifests/003-deployment.yaml
@@ -1,33 +1,5 @@
 apiVersion: v1
 items:
-- apiVersion: v1
-  kind: PersistentVolumeClaim
-  metadata:
-    name: mariadb-primary-pvc
-    namespace: openvk
-    annotations: {}
-      # volume.beta.kubernetes.io/storage-class: "efs-sc"
-  spec:
-    # storageClassName: efs-sc
-    accessModes:
-    - ReadWriteOnce
-    resources:
-      requests:
-        storage: 10Gi
-- apiVersion: v1
-  kind: PersistentVolumeClaim
-  metadata:
-    name: mariadb-eventdb-pvc
-    namespace: openvk
-    annotations: {}
-      # volume.beta.kubernetes.io/storage-class: "efs-sc"
-  spec:
-    # storageClassName: efs-sc
-    accessModes:
-    - ReadWriteOnce
-    resources:
-      requests:
-        storage: 10Gi
 - apiVersion: apps/v1
   kind: Deployment
   metadata:
@@ -68,6 +40,14 @@ items:
           - mountPath: /opt/chandler/chandler.yml
             name: openvk-config
             subPath: chandler.yml
+          - mountPath: /opt/chandler/extensions/available/openvk/storage
+            name: openvk-storage
+          - mountPath: /opt/chandler/extensions/available/openvk/tmp/api-storage/audios
+            name: openvk-storage-audios
+          - mountPath: /opt/chandler/extensions/available/openvk/tmp/api-storage/photos
+            name: openvk-storage-photos
+          - mountPath: /opt/chandler/extensions/available/openvk/tmp/api-storage/videos
+            name: openvk-storage-videos
         dnsPolicy: ClusterFirst
         restartPolicy: Always
         volumes:
@@ -76,6 +56,18 @@ items:
         - name: openvk-config
           configMap:
             name: openvk-config
+        - name: openvk-storage
+          persistentVolumeClaim:
+            claimName: openvk-storage-pvc
+        - name: openvk-storage-audios
+          persistentVolumeClaim:
+            claimName: openvk-storage-audios-pvc
+        - name: openvk-storage-photos
+          persistentVolumeClaim:
+            claimName: openvk-storage-photos-pvc
+        - name: openvk-storage-videos
+          persistentVolumeClaim:
+            claimName: openvk-storage-videos-pvc
 - apiVersion: apps/v1
   kind: Deployment
   metadata:
@@ -172,41 +164,75 @@ items:
         - name: mariadb-eventdb
           persistentVolumeClaim:
             claimName: mariadb-eventdb-pvc
-- apiVersion: v1
-  kind: Service
+- apiVersion: apps/v1
+  kind: Deployment
   metadata:
-    name: mariadb-primary-svc
+    name: phpmyadmin
     namespace: openvk
   spec:
-    ports:
-    - name: mysql
-      port: 3306
+    replicas: 1
+    revisionHistoryLimit: 10
     selector:
-      app: mariadb-primary
-    type: ClusterIP
-- apiVersion: v1
-  kind: Service
+      matchLabels:
+        app: phpmyadmin
+    strategy:
+      type: Recreate
+    template:
+      metadata:
+        labels:
+          app: phpmyadmin
+      spec:
+        containers:
+        - env:
+          - name: PMA_ARBITRARY
+            value: "1"
+          image: docker.io/phpmyadmin:5
+          imagePullPolicy: Always
+          name: phpmyadmin
+          ports:
+          - containerPort: 80
+            name: http
+            protocol: TCP
+          resources:
+            requests:
+              cpu: 100m
+              memory: 512Mi
+        dnsPolicy: ClusterFirst
+        restartPolicy: Always
+- apiVersion: apps/v1
+  kind: Deployment
   metadata:
-    name: mariadb-eventdb-svc
+    name: adminer
     namespace: openvk
   spec:
-    ports:
-    - name: mysql
-      port: 3306
+    replicas: 1
+    revisionHistoryLimit: 10
     selector:
-      app: mariadb-eventdb
-    type: ClusterIP
-- apiVersion: v1
-  kind: Service
-  metadata:
-    name: openvk-svc
-    namespace: openvk
-  spec:
-    ports:
-    - name: http
-      port: 80
-    selector:
-      app: openvk
-    type: LoadBalancer
+      matchLabels:
+        app: adminer
+    strategy:
+      type: Recreate
+    template:
+      metadata:
+        labels:
+          app: adminer
+      spec:
+        containers:
+        - env:
+          - name: ADMINER_DEFAULT_SERVER
+            value: "mariadb-primary-svc"
+          image: docker.io/adminer:4
+          imagePullPolicy: Always
+          name: adminer
+          ports:
+          - containerPort: 8080
+            name: http
+            protocol: TCP
+          resources:
+            requests:
+              cpu: 100m
+              memory: 512Mi
+        dnsPolicy: ClusterFirst
+        restartPolicy: Always
 kind: List
 metadata: {}
